--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,7 @@
 <% if current_user %>
   <%= form_for @article do |f| %>
-    <%= f.text_field :link %>
     <%= f.text_field :url %>
+    <%= f.text_field :title %>
+    <%= f.submit 'submit' %>
   <% end %>
 <% end %>
