--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,8 @@
 <% @articles.each do |date, articles| %>
   <div class="each_day">
-    <h2><%= date %></h2>
+    <h2><%= date.to_date %></h2>
     <% articles.each do |article| %>
-      <%= article.title %>
-      <%= article.url %>
+      <%= link_to article.title, article.url, target: '_blank' %>
     <% end %>
   </div>
 <% end %>
