--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,7 @@
 <% if current_user %>
   <%= form_for @article do |f| %>
-    <%= f.text_field :url %>
-    <%= f.text_field :title %>
+    <%= f.text_field :url, placeholder: 'Article URL' %>
+    <%= f.text_field :title, placeholder: 'Article Title' %>
     <%= f.submit 'submit' %>
   <% end %>
 <% end %>
