--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,13 @@
   <div class="each_day">
     <h2><%= date.to_date %></h2>
     <% articles.each do |article| %>
-      <%= link_to article.title, article.url, target: '_blank' %>
+      <div>
+        <%= link_to article.title, article.url, target: '_blank' %>
+        <div id="like_count_for_article_<%=article.id%>">
+          <%= pluralize(article.likes.count, 'like') %>
+        </div>
+        <%= link_to 'like', like_article_path(liked_article_id: article.id), remote: true %>
+      </div>
     <% end %>
   </div>
 <% end %>
