--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,10 +4,7 @@
     <% articles.each do |article| %>
       <div>
         <%= link_to article.title, article.url, target: '_blank' %>
-        <div id="like_count_for_article_<%=article.id%>">
-          <%= pluralize(article.likes.count, 'like') %>
-        </div>
-        <%= link_to 'like', like_article_path(liked_article_id: article.id), remote: true %>
+        <%= render partial: 'article_like_box', locals: { article: article } %>
       </div>
     <% end %>
   </div>
