destroyable by owner

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,9 +2,12 @@
   <div class="each_day">
     <h2><%= date.to_date %></h2>
     <% articles.each do |article| %>
-      <div>
+      <div style="padding: 20px;">
         <%= link_to article.title, article.url, target: '_blank' %>
         <%= render partial: 'article_like_box', locals: { article: article } %>
+        <% if current_user.articles.exists?(article.id) %>
+          <%= link_to 'delete', article_path(article.id), method: :delete %>
+        <% end %>
       </div>
     <% end %>
   </div>
