--- a/app/views/articles/_article_like_box.html.erb
+++ b/app/views/articles/_article_like_box.html.erb
@@ -1,8 +1,10 @@
-<div id="like_count_for_article_<%=article.id%>">
-  <%= pluralize(like_cnt, 'like') %>
+<div class="like_count_box" id="like_count_for_article_<%=article.id%>">
+  <span class="text-muted">
+    <%= pluralize(like_cnt, 'like') %>
+  </span>
   <% if current_user && current_user.likes.exists?(article_id: article.id, liked: true) %>
-    <%= link_to '💔', like_article_path(liked_article_id: article.id), remote: true %>
+    <%= link_to '💔', like_article_path(liked_article_id: article.id), remote: true, class: 'heartbreak', style: 'display:none;' %>
   <% elsif current_user %>
-    <%= link_to '❤', like_article_path(liked_article_id: article.id), remote: true %>
+    <%= link_to '💓', like_article_path(liked_article_id: article.id), remote: true, class: 'heartbeat', style: 'display:none;' %>
   <% end %>
 </div>
